Fix Keyboard issues on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -120,6 +120,7 @@ body {
 
   .container {
     min-height: 580px;
+    height: 100vh;
   }
 
   .lookup_form {
